--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 </a>
                 <ul class="listaNav">
                     <li class="listaItem"><a href="#" class="linkNav">Tendencias</a></li>
-                    <li class="listaItem"><a href="#" class="linkNav">Registrarse</a></li>
-                    <li class="listaItem"><a href="#" class="linkNav iniciarSesion">Iniciar Sesion</a></li>
+                    <li class="listaItem"><a href="/registrarse.html" class="linkNav">Registrarse</a></li>
+                    <li class="listaItem"><a href="/iniciarSesion.html" class="linkNav iniciarSesion">Iniciar Sesion</a></li>
                 </ul>
         </nav>
     </header>
