--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
     <!-- MAIN  -->
     <main id="main" class="main">
         <section class="seccionIniciarSesion">
-            <form action="">
+            <form action="" method="get">
                 <h2 class="tituloIniciarSesion">Iniciar Sesión</h2>
                 <div> 
                     <input type="email" name="email" id="email" placeholder="Email">
@@ -46,6 +46,6 @@
         </section>
     </main>
 
-    <script src="/validarInicioSesion.js"></script>
+    <script src="/login.js"></script>
   </body>
 </html>
