--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul class="listaNav">
                     <li class="listaItem"><a href="#" class="linkNav">Tendencias</a></li>
                     <li class="listaItem"><a href="#" class="linkNav">Registrarse</a></li>
-                    <li class="listaItem"><a href="/login.html" class="linkNav iniciarSesion">Iniciar Sesion</a></li>
+                    <li class="listaItem"><a href="./login.html" class="linkNav iniciarSesion">Iniciar Sesion</a></li>
                 </ul>
         </nav>
     </header>
